getting rid of stdin/out/rand